--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Tech Travel & Tours</title>
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="fonts/foundation-icons.css">
-    <link rel="icon" type="image/x-icon" href="ico.gif" />
+    <!-- <link rel="icon" type="image/x-icon" href="ico.gif" />-->
   </head>
   <body>
 
@@ -32,7 +32,7 @@
       
     </div>
       </div>
-      <div class="top-bar show-for-small hide-for-large">
+      <div class="top-bar hide-for-xlarge">
       <a class="menu-icon" href="#" data-toggle="small-menu"></a>
       <div class="float-right account-items" >
         <a data-open="login-page">Login</a>
@@ -54,7 +54,7 @@
           </div> 
       <div class="top-header" style="font-color: #34444e;">
 
-         <div class=" top-bar show-for-large hide-for-small"  >
+         <div class=" top-bar show-for-xlarge "  >
           <div class="medium-4 columns">
             <ul class="menu ">
               <li class=""><a href="#">Flight</a></li>
@@ -313,7 +313,7 @@
 
     <div id="big-banner">
     <!-- orbit begins here -->
-    <div class="orbit" role="region" aria-label="Our Services" data-orbit data-options="animInFromLeft: fade-in; animInFromRight:fade-in; animOutToLeft: fade-out; animOutToRight: fade-out" > 
+    <div class="orbit show-for-medium" role="region" aria-label="Our Services" data-orbit data-options="animInFromLeft: fade-in; animInFromRight:fade-in; animOutToLeft: fade-out; animOutToRight: fade-out" > 
         <ul class="orbit-container">
           <button class="orbit-previous">
             <span class="show-for-sr">Previous Slide</span>
@@ -347,7 +347,7 @@
           </ul>
           </div>
           <div class="row">
-          <div class="large-8 medium-12 columns">
+          <div class="medium-12 xlarge-8 columns">
          <form class="flight-search-form" >
           <div class="row">
              <div class="medium-4 small-12 columns radio medium-offset-1" style="margin-top: 10px;">
@@ -613,7 +613,7 @@
         </form> <!-- Hotels form ends here -->
 
           </div>
-           <div class="medium-4 float-right text-center show-for-large" style="background: white; ">
+           <div class="medium-4 float-right text-center show-for-xlarge" style="background: white; ">
             <p>Advertisement</p>
           </div>
           </div>
