changes to index page

--- a/index.html
+++ b/index.html
@@ -394,22 +394,22 @@
           <div class="medium-12 xlarge-9 columns">
          <form class="flight-search-form" >
           <div class="row">
-             <div class="medium-4 small-12 columns radio " style="margin-top: 10px;">
+             <div class="medium-12 small-12 columns radio " style="margin-top: 10px;">
                 <label></label>
                 <input type="radio" name="tripType" checked=""> :- Return &nbsp;
                 <input type="radio" name="tripType"> :- One Way
             </div> 
           </div>
         <div class="row">
-          <div class="medium-5 small-12  columns" >
+          <div class="medium-12 large-5 small-12  columns" >
             <label>Fly From:</label>
             <input type="text" name="flyfrom"id="flyfrom" placeholder="Type a City or Airport">
           </div>
-          <div class="medium-5 small-12 columns">
+          <div class="medium-12 small-12 large-5 columns">
             <label>Fly To:</label>
             <input type="text" name="flyto" id="flyto" placeholder="Type a City or Airport">
           </div>
-          <div class="medium-2 small-12 columns">
+          <div class="medium-12 small-12 large-2 columns">
             <label>Class</label>
             <select name="flightclass" id="flightclass">
               <option>Economy</option>
@@ -422,11 +422,11 @@
         </div>
         <div class="row">
 
-          <div class="medium-3 small-6   columns" >
+          <div class="medium-6 large-3 small-6   columns" >
             <label>Departure:</label>
             <input type="date" name="flightdeparture" id="flightdeparture">
           </div>
-          <div class="medium-3 small-6 columns">
+          <div class="medium-6 large-3 small-6 columns">
             <label >Return:</label>
             <input type="date" name="flightreturn" id="flightreturn">
           </div>
@@ -470,11 +470,12 @@
               <option>6</option>
             </select>
           </div> 
+            <div class="small-6 show-for-medium-down"></div>
         </div>
         <div class="row">
           <div class="medium-12 small-12 columns ">
               <label></label>
-             <button type="button" class="button small-12 medium-2" id="flightsearchbutton"><i class="fi-magnifying-glass">Search</i></button>
+             <button type="button" class="button small-12 medium-12 large-2" id="flightsearchbutton"><i class="fi-magnifying-glass">Search</i></button>
           </div>
           <div class="medium-4 columns"></div>
         </div>
